[tool.poetry]
name = "domo-code"
version = "0.1.0"
description = "Workspace setup automation to make your day easier"
authors = ["Ugo Loobuyck <ugo813@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
